# Math

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: CI.yml
dependencies/: CMakeLists.txt
include/: Vector.hpp
include/Math/: Constants.hpp  Macros.hpp  Matrix.hpp  Vector.hpp
src/: Matrix3x3f.cpp  Matrix4x4f.cpp  Vector2f.cpp  Vector3f.cpp  Vector4f.cpp
tests/: CMakeLists.txt  Math_testCases.cpp  MatrixTestCases.cpp  VectorTestCases.cpp
